Update navigation: Cennik -> Porównanie with link to comparison section

--- a/pages/fluinty-fleet.html
+++ b/pages/fluinty-fleet.html
@@ -165,7 +165,7 @@
                     </li>
                     <li>
                         <a class="block py-2 px-3 text-slate-900 rounded hover:bg-slate-100 md:hover:bg-transparent md:hover:text-primary md:p-0 dark:text-white dark:hover:text-primary"
-                            href="#pricing">Cennik</a>
+                            href="#comparison">Porównanie</a>
                     </li>
                 </ul>
             </div>
@@ -182,8 +182,8 @@
             class="mobile-link text-2xl font-display font-medium text-slate-800 dark:text-slate-200">Funkcje</a>
         <a href="#process" class="mobile-link text-2xl font-display font-medium text-slate-800 dark:text-slate-200">Jak
             to działa</a>
-        <a href="#pricing"
-            class="mobile-link text-2xl font-display font-medium text-slate-800 dark:text-slate-200">Cennik</a>
+        <a href="#comparison"
+            class="mobile-link text-2xl font-display font-medium text-slate-800 dark:text-slate-200">Porównanie</a>
         <a href="http://localhost:3000"
             class="mobile-link px-8 py-3 rounded-full bg-primary text-white font-medium text-lg shadow-lg shadow-primary/25">
             Rozpocznij
@@ -511,7 +511,7 @@
         </div>
     </section>
 
-    <section class="py-16 bg-slate-50 dark:bg-slate-900">
+    <section id="comparison" class="py-16 bg-slate-50 dark:bg-slate-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Section Header -->
             <div class="text-center max-w-3xl mx-auto mb-16">
